# project_eden

./: .gitignore  README.md  README.rst  pyproject.toml
db/: create_db_from_local_csv.py  create_tables.py  insert_to_db_from_fmp.py  pyproject.toml  utils.py
db/db/: company_tickers.json  create_db_from_local_csv.py  create_tables.py  data_ingestor.py  insert_to_db_from_fmp.py  utils.py
financials_grab/: financial_statements_quarterly_sp500.py  income_statements_sp500.py
income_statements_sp500/: income_statements_sp500.py
project_eden/: cli.py
project_eden/db/: config_example.json  create_db_from_local_csv.py  create_tables.py  data_ingestor.py  utils.py
project_eden/pipeline/: __init__.py  data_ingestion_etl.py  data_ingestion_parallel.py
project_eden/steps/: data_ingestion.py
project_eden/utils/: __init__.py  rate_limiter.py
scripts/sql_queries/: companies_trading_below_cash_value.sql  current_adj_fcf_yield.sql  current_adj_fcf_yield_compared_to_history.sql  fundamental_metrics_for_portfolio.sql  fundamental_metrics_for_portfolio_ttm.sql  fundamental_metrics_history_for_ticker.sql  median_cagr.sql  median_roce_last_5_years.sql  query_by_fundamental_metrics_ttm.sql
tests/utils/: test_rate_limiter.py
