[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["glabaria <george.labaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pandas = "^2.2.3"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
